update to JOSM 10658
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@32725 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4